доработан эндпоинт, добавление описания в сваггер
